Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1073,9 +1073,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(unique_travel_cities)"
    ]
@@ -1089,9 +1100,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Salina Island',\n",
+       " 'Iguazu Falls',\n",
+       " 'Buenos Aires',\n",
+       " 'Marakesh',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Greenville',\n",
+       " 'Los Cabos',\n",
+       " 'Solta',\n",
+       " 'Pyeongchang',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Toronto',\n",
+       " 'San Antonio']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_travel_cities"
    ]
